lox-tests/tests/operator/add_bool_string.stderr
ERROR: Unsupported operation '+' between types 'boolean' and 'string'
 --> 1:1
  |
1 | true + "s"; // expect runtime error: Operands must be two numbers or two strings.
  | ^--------^
